--- a/.env.dist
+++ b/.env.dist
@@ -11,3 +11,8 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_HOST=your_db_host
 DB_PORT=your_db_port
+
+
+# STRIPE secret keys taken from stripe account dashboard
+STRIPE_PUBLISHED_KEY=stripe_published_key
+STRIPE_SECRET_KEY=stripe_secret_key
