[feature] implemented payment using stripe, modified order app

--- a/.env.dist
+++ b/.env.dist
@@ -16,3 +16,4 @@ DB_PORT=your_db_port
 # STRIPE secret keys taken from stripe account dashboard
 STRIPE_PUBLISHED_KEY=stripe_published_key
 STRIPE_SECRET_KEY=stripe_secret_key
+STRIPE_WEBHOOK_SECRET=stripe_webhook_secret
