[feature] added method email_customer_about_failed_payment to class OrderClassProcessing, in settings configuration of SMPT

--- a/.env.dist
+++ b/.env.dist
@@ -17,3 +17,8 @@ DB_PORT=your_db_port
 STRIPE_PUBLISHED_KEY=stripe_published_key
 STRIPE_SECRET_KEY=stripe_secret_key
 STRIPE_WEBHOOK_SECRET=stripe_webhook_secret
+
+
+# mailtrap.io below data from SMPT Settings for Django
+EMAIL_HOST_USER=email_host_user
+EMAIL_HOST_PASSWORD=email_host_password
