[feature] installed 'sentry', requirements.txt updated

--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,6 @@ STRIPE_WEBHOOK_SECRET=stripe_webhook_secret
 # mailtrap.io below data from SMPT Settings for Django
 EMAIL_HOST_USER=email_host_user
 EMAIL_HOST_PASSWORD=email_host_password
+
+# sentry.io
+SENTRY_DSN=sentry_dsn
