--- a/.github/workflows/ws-ci.yml
+++ b/.github/workflows/ws-ci.yml
@@ -61,7 +61,7 @@ jobs:
       continue-on-error: true # TODO remove later
     - name: Run Bandit
       run: |
-        bandit -r src -c bandit.yaml
+        bandit src -c bandit.yaml
     - name: Run Ruff
       run: |
         ruff src
