--- a/bandit.yaml
+++ b/bandit.yaml
@@ -1,2 +1,1 @@
-exclude_dirs: ['src\shop\management\commands\populate_db.py',
-               'tests\', '*\tests\']
+exclude_dirs: ['tests', 'factories']
