--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ Pillow==10.0.0
 platformdirs==4.2.0
 plotly==5.22.0
 pre-commit==3.6.2
-psycopg2==2.9.7
+psycopg2-binary==2.9.9
 pycparser==2.22
 pydantic==2.3.0
 pydantic_core==2.6.3
