--- a/.github/workflows/ws-ci.yml
+++ b/.github/workflows/ws-ci.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install poetry
+        poetry install
     - name: Run Tests
       run: |
-        cd src
-        python manage.py test
+        poetry python manage.py test
       env:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_NAME: ${{ vars.DB_NAME }}
