--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,10 @@ stripe = "^8.5.0"
 python-box = "^7.2.0"
 boto3 = "^1.35.66"
 
+
 [tool.poetry.dev-dependencies]
 pre-commit = "3.6.2"
 black = "23.3.0"
 conventional-pre-commit = "2.3.0"
 isort = "5.12.0"
-bandit = "1.7.5"
+bandit = "^1.8.0"
