--- a/.github/workflows/ws-ci.yml
+++ b/.github/workflows/ws-ci.yml
@@ -62,7 +62,7 @@ jobs:
       continue-on-error: true # TODO remove later
     - name: Run Bandit
       run: |
-        poetry run bandit -c bandit.yaml -r
+        poetry run bandit -c bandit.yaml -r .
     - name: Run Ruff
       run: |
         poetry run ruff check
