--- a/.github/workflows/ws-ci.yml
+++ b/.github/workflows/ws-ci.yml
@@ -29,21 +29,24 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-
+    env:
+      POETRY_VIRTUALENVS_CREATE:  false
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+    - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
         pip install poetry
+    - name: Install Dependencies
+      run: |
         poetry install --no-root
     - name: Run Tests
       run: |
-        poetry run python manage.py test
+        python manage.py test
       env:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_NAME: ${{ vars.DB_NAME }}
@@ -62,11 +65,11 @@ jobs:
       continue-on-error: true # TODO remove later
     - name: Run Bandit
       run: |
-        poetry run bandit -c bandit.yaml -r .
+        bandit -c bandit.yaml -r .
     - name: Run Ruff
       run: |
-        poetry run ruff check
+        ruff check
     - name: Run Safety
       run: |
-        poetry run safety check
+        safety check
       continue-on-error: true
