[fix] fic gitflow CI env

--- a/.github/workflows/ws-ci.yml
+++ b/.github/workflows/ws-ci.yml
@@ -63,6 +63,7 @@ jobs:
         SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
         DJANGO_ADMIN_PASSWORD: ${{ secrets.DJANGO_ADMIN_PASSWORD }}
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+        DOMAIN: ${{ vars.DOMAIN }}
     - name: Run Bandit
       run: |
         bandit -c bandit.yaml -r .
