[feature] added in dashboard filtering of user [fix] in gitignore removed src in paths

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-src/media
-src/carts/management/
+media
+carts/management/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
