--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.10.7"
 awsebcli = "3.21.0"
 Django = "4.2.4"
 django-bootstrap-datepicker-plus = "5.0.4"
@@ -23,7 +23,7 @@ Faker = "22.6.0"
 icecream = "2.1.3"
 numpy = "1.26.4"
 pandas = "2.2.2"
-pillow = "10.0.0"
+pillow = "11.0.0"
 plotly = "5.22.0"
 poetry = "^1.8.4"
 psycopg2-binary = "2.9.10"
