--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,115 @@
-annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-ansicon==1.89.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
-asttokens==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
-autopep8==2.3.2 ; python_version >= "3.10" and python_version < "4.0"
-awsebcli==3.21.0 ; python_version >= "3.10" and python_version < "4.0"
-blessed==1.20.0 ; python_version >= "3.10" and python_version < "4.0"
-blinker==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-boto3==1.35.99 ; python_version >= "3.10" and python_version < "4.0"
-botocore==1.35.99 ; python_version >= "3.10" and python_version < "4.0"
-build==1.2.2.post1 ; python_version >= "3.10" and python_version < "4.0"
-cachecontrol[filecache]==0.14.2 ; python_version >= "3.10" and python_version < "4.0"
-cement==2.10.14 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2024.12.14 ; python_version >= "3.10" and python_version < "4.0"
-cffi==1.17.1 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
-channels==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.4.1 ; python_version >= "3.10" and python_version < "4.0"
-cleo==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
-click==8.1.8 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
-crashtest==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
-crispy-bootstrap4==2024.10 ; python_version >= "3.10" and python_version < "4.0"
-cryptography==44.0.0 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "linux"
-dash-bootstrap-components==1.7.1 ; python_version >= "3.10" and python_version < "4"
-dash-core-components==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash-html-components==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash-table==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash==2.9.3 ; python_version >= "3.10" and python_version < "4.0"
-distlib==0.3.9 ; python_version >= "3.10" and python_version < "4.0"
-django-bootstrap-datepicker-plus==5.0.4 ; python_version >= "3.10" and python_version < "4.0"
-django-crispy-forms==2.3 ; python_version >= "3.10" and python_version < "4.0"
-django-environ==0.11.2 ; python_version >= "3.10" and python_version < "4"
-django-extensions==3.2.3 ; python_version >= "3.10" and python_version < "4.0"
-django-filter==24.3 ; python_version >= "3.10" and python_version < "4.0"
-django-phonenumber-field==7.3.0 ; python_version >= "3.10" and python_version < "4.0"
-django-plotly-dash==2.3.1 ; python_version >= "3.10" and python_version < "4.0"
-django-silk==5.3.2 ; python_version >= "3.10" and python_version < "4.0"
-django-storages==1.14.4 ; python_version >= "3.10" and python_version < "4.0"
-django==4.2.4 ; python_version >= "3.10" and python_version < "4.0"
-dpd-components==0.1.0 ; python_version >= "3.10" and python_version < "4.0"
-dulwich==0.21.7 ; python_version >= "3.10" and python_version < "4.0"
-executing==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
-factory-boy==3.3.0 ; python_version >= "3.10" and python_version < "4.0"
-faker==22.6.0 ; python_version >= "3.10" and python_version < "4.0"
-fastjsonschema==2.21.1 ; python_version >= "3.10" and python_version < "4.0"
-filelock==3.17.0 ; python_version >= "3.10" and python_version < "4.0"
-flask==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
-gprof2dot==2024.6.6 ; python_version >= "3.10" and python_version < "4.0"
-icecream==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
-importlib-metadata==8.6.1 ; python_version >= "3.10" and python_version < "3.12"
-installer==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
-jaraco-classes==3.4.0 ; python_version >= "3.10" and python_version < "4.0"
-jeepney==0.8.0 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "linux"
-jinja2==3.1.5 ; python_version >= "3.10" and python_version < "4.0"
-jinxed==1.3.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-jmespath==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
-keyring==24.3.1 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
-more-itertools==10.6.0 ; python_version >= "3.10" and python_version < "4.0"
-msgpack==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
-numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
-pandas==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
-pathspec==0.10.1 ; python_version >= "3.10" and python_version < "4.0"
-pexpect==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
-phonenumberslite==8.13.53 ; python_version >= "3.10" and python_version < "4.0"
-pillow==10.0.0 ; python_version >= "3.10" and python_version < "4.0"
-pkginfo==1.12.0 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
-plotly==5.22.0 ; python_version >= "3.10" and python_version < "4.0"
-poetry-core==1.9.1 ; python_version >= "3.10" and python_version < "4.0"
-poetry-plugin-export==1.8.0 ; python_version >= "3.10" and python_version < "4.0"
-poetry==1.8.5 ; python_version >= "3.10" and python_version < "4.0"
-psycopg2-binary==2.9.10 ; python_version >= "3.10" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-pycodestyle==2.12.1 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
-pydantic-core==2.27.2 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.10.5 ; python_version >= "3.10" and python_version < "4.0"
-pygments==2.19.1 ; python_version >= "3.10" and python_version < "4.0"
-pypiwin32==223 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "4.0"
-pyproject-hooks==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
-python-box==7.3.2 ; python_version >= "3.10" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
-pywin32-ctypes==0.2.3 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
-pywin32==308 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "4.0"
-pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
-rapidfuzz==3.11.0 ; python_version >= "3.10" and python_version < "4.0"
-requests-toolbelt==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
-s3transfer==0.10.4 ; python_version >= "3.10" and python_version < "4.0"
-secretstorage==3.3.3 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "linux"
-semantic-version==2.10.0 ; python_version >= "3.10" and python_version < "4.0"
-sentry-sdk==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.8.0 ; python_version >= "3.10" and python_version < "4.0"
-shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
-six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlparse==0.5.3 ; python_version >= "3.10" and python_version < "4.0"
-stripe==8.11.0 ; python_version >= "3.10" and python_version < "4.0"
-tenacity==9.0.0 ; python_version >= "3.10" and python_version < "4.0"
-termcolor==2.5.0 ; python_version >= "3.10" and python_version < "4.0"
-tomli==2.2.1 ; python_version >= "3.10" and python_version < "3.11"
-tomlkit==0.13.2 ; python_version >= "3.10" and python_version < "4.0"
-trove-classifiers==2025.1.15.22 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2025.1 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==1.26.20 ; python_version >= "3.10" and python_version < "4.0"
-virtualenv==20.29.1 ; python_version >= "3.10" and python_version < "4.0"
-wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "4.0"
-werkzeug==3.1.3 ; python_version >= "3.10" and python_version < "4.0"
-xattr==1.1.4 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "darwin"
-zipp==3.21.0 ; python_version >= "3.10" and python_version < "3.12"
+annotated-types==0.7.0 ; python_full_version == "3.10.7"
+ansicon==1.89.0 ; platform_system == "Windows" and python_full_version == "3.10.7"
+asgiref==3.8.1 ; python_full_version == "3.10.7"
+asttokens==3.0.0 ; python_full_version == "3.10.7"
+autopep8==2.3.2 ; python_full_version == "3.10.7"
+awsebcli==3.21.0 ; python_full_version == "3.10.7"
+blessed==1.20.0 ; python_full_version == "3.10.7"
+blinker==1.9.0 ; python_full_version == "3.10.7"
+boto3==1.35.99 ; python_full_version == "3.10.7"
+botocore==1.35.99 ; python_full_version == "3.10.7"
+build==1.2.2.post1 ; python_full_version == "3.10.7"
+cachecontrol[filecache]==0.14.2 ; python_full_version == "3.10.7"
+cement==2.10.14 ; python_full_version == "3.10.7"
+certifi==2025.1.31 ; python_full_version == "3.10.7"
+cffi==1.17.1 ; python_full_version == "3.10.7" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
+channels==4.2.0 ; python_full_version == "3.10.7"
+charset-normalizer==3.4.1 ; python_full_version == "3.10.7"
+cleo==2.1.0 ; python_full_version == "3.10.7"
+click==8.1.8 ; python_full_version == "3.10.7"
+colorama==0.4.6 ; python_full_version == "3.10.7"
+crashtest==0.4.1 ; python_full_version == "3.10.7"
+crispy-bootstrap4==2024.10 ; python_full_version == "3.10.7"
+cryptography==44.0.2 ; python_full_version == "3.10.7" and sys_platform == "linux"
+dash-bootstrap-components==1.7.1 ; python_full_version == "3.10.7"
+dash-core-components==2.0.0 ; python_full_version == "3.10.7"
+dash-html-components==2.0.0 ; python_full_version == "3.10.7"
+dash-table==5.0.0 ; python_full_version == "3.10.7"
+dash==2.9.3 ; python_full_version == "3.10.7"
+distlib==0.3.9 ; python_full_version == "3.10.7"
+django-bootstrap-datepicker-plus==5.0.4 ; python_full_version == "3.10.7"
+django-crispy-forms==2.3 ; python_full_version == "3.10.7"
+django-environ==0.11.2 ; python_full_version == "3.10.7"
+django-extensions==3.2.3 ; python_full_version == "3.10.7"
+django-filter==24.3 ; python_full_version == "3.10.7"
+django-phonenumber-field==7.3.0 ; python_full_version == "3.10.7"
+django-plotly-dash==2.3.1 ; python_full_version == "3.10.7"
+django-silk==5.3.2 ; python_full_version == "3.10.7"
+django-storages==1.14.4 ; python_full_version == "3.10.7"
+django==4.2.4 ; python_full_version == "3.10.7"
+dpd-components==0.1.0 ; python_full_version == "3.10.7"
+dulwich==0.21.7 ; python_full_version == "3.10.7"
+executing==2.2.0 ; python_full_version == "3.10.7"
+factory-boy==3.3.0 ; python_full_version == "3.10.7"
+faker==22.6.0 ; python_full_version == "3.10.7"
+fastjsonschema==2.21.1 ; python_full_version == "3.10.7"
+filelock==3.18.0 ; python_full_version == "3.10.7"
+flask==3.1.0 ; python_full_version == "3.10.7"
+gprof2dot==2024.6.6 ; python_full_version == "3.10.7"
+icecream==2.1.3 ; python_full_version == "3.10.7"
+idna==3.10 ; python_full_version == "3.10.7"
+importlib-metadata==8.6.1 ; python_full_version == "3.10.7"
+installer==0.7.0 ; python_full_version == "3.10.7"
+itsdangerous==2.2.0 ; python_full_version == "3.10.7"
+jaraco-classes==3.4.0 ; python_full_version == "3.10.7"
+jeepney==0.9.0 ; sys_platform == "linux" and python_full_version == "3.10.7"
+jinja2==3.1.6 ; python_full_version == "3.10.7"
+jinxed==1.3.0 ; platform_system == "Windows" and python_full_version == "3.10.7"
+jmespath==1.0.1 ; python_full_version == "3.10.7"
+keyring==24.3.1 ; python_full_version == "3.10.7"
+markupsafe==3.0.2 ; python_full_version == "3.10.7"
+more-itertools==10.6.0 ; python_full_version == "3.10.7"
+msgpack==1.1.0 ; python_full_version == "3.10.7"
+numpy==1.26.4 ; python_full_version == "3.10.7"
+packaging==24.2 ; python_full_version == "3.10.7"
+pandas==2.2.2 ; python_full_version == "3.10.7"
+pathspec==0.10.1 ; python_full_version == "3.10.7"
+pexpect==4.9.0 ; python_full_version == "3.10.7"
+phonenumberslite==8.13.55 ; python_full_version == "3.10.7"
+pillow==11.0.0 ; python_full_version == "3.10.7"
+pkginfo==1.12.1.2 ; python_full_version == "3.10.7"
+platformdirs==4.3.6 ; python_full_version == "3.10.7"
+plotly==5.22.0 ; python_full_version == "3.10.7"
+poetry-core==1.9.1 ; python_full_version == "3.10.7"
+poetry-plugin-export==1.8.0 ; python_full_version == "3.10.7"
+poetry==1.8.5 ; python_full_version == "3.10.7"
+psycopg2-binary==2.9.10 ; python_full_version == "3.10.7"
+ptyprocess==0.7.0 ; python_full_version == "3.10.7"
+pycodestyle==2.12.1 ; python_full_version == "3.10.7"
+pycparser==2.22 ; python_full_version == "3.10.7" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
+pydantic-core==2.27.2 ; python_full_version == "3.10.7"
+pydantic==2.10.6 ; python_full_version == "3.10.7"
+pygments==2.19.1 ; python_full_version == "3.10.7"
+pypiwin32==223 ; sys_platform == "win32" and python_full_version == "3.10.7"
+pyproject-hooks==1.2.0 ; python_full_version == "3.10.7"
+python-box==7.3.2 ; python_full_version == "3.10.7"
+python-dateutil==2.9.0.post0 ; python_full_version == "3.10.7"
+pytz==2025.1 ; python_full_version == "3.10.7"
+pywin32-ctypes==0.2.3 ; sys_platform == "win32" and python_full_version == "3.10.7"
+pywin32==309 ; sys_platform == "win32" and python_full_version == "3.10.7"
+pyyaml==6.0.2 ; python_full_version == "3.10.7"
+rapidfuzz==3.12.2 ; python_full_version == "3.10.7"
+requests-toolbelt==1.0.0 ; python_full_version == "3.10.7"
+requests==2.31.0 ; python_full_version == "3.10.7"
+s3transfer==0.10.4 ; python_full_version == "3.10.7"
+secretstorage==3.3.3 ; sys_platform == "linux" and python_full_version == "3.10.7"
+semantic-version==2.10.0 ; python_full_version == "3.10.7"
+sentry-sdk==2.6.0 ; python_full_version == "3.10.7"
+setuptools==76.0.0 ; python_full_version == "3.10.7"
+shellingham==1.5.4 ; python_full_version == "3.10.7"
+six==1.17.0 ; python_full_version == "3.10.7"
+sqlparse==0.5.3 ; python_full_version == "3.10.7"
+stripe==8.11.0 ; python_full_version == "3.10.7"
+tenacity==9.0.0 ; python_full_version == "3.10.7"
+termcolor==2.5.0 ; python_full_version == "3.10.7"
+tomli==2.2.1 ; python_full_version == "3.10.7"
+tomlkit==0.13.2 ; python_full_version == "3.10.7"
+trove-classifiers==2025.3.13.13 ; python_full_version == "3.10.7"
+typing-extensions==4.12.2 ; python_full_version == "3.10.7"
+tzdata==2025.1 ; python_full_version == "3.10.7"
+urllib3==1.26.20 ; python_full_version == "3.10.7"
+virtualenv==20.29.3 ; python_full_version == "3.10.7"
+wcwidth==0.2.13 ; python_full_version == "3.10.7"
+werkzeug==3.1.3 ; python_full_version == "3.10.7"
+xattr==1.1.4 ; sys_platform == "darwin" and python_full_version == "3.10.7"
+zipp==3.21.0 ; python_full_version == "3.10.7"
